# eldiro

./: .gitignore  Cargo.toml
crates/actinides/: Cargo.toml
crates/actinides/src/: lib.rs
crates/boks/: Cargo.toml
crates/boks/src/: main.rs
crates/eldiro/: Cargo.toml
crates/eldiro-cli/: Cargo.toml
crates/eldiro-cli/src/: main.rs
crates/eldiro/src/: binding_def.rs  env.rs  expr.rs  func_def.rs  lib.rs  stmt.rs  utils.rs  val.rs
crates/eldiro/src/expr/: binding_usage.rs  block.rs  func_call.rs
crates/ptrs/: Cargo.toml
crates/ptrs/src/: rc.rs
crates/strsplit/: Cargo.toml
crates/strsplit/src/: lib.rs
crates/too-many-lists/: Cargo.toml
crates/too-many-lists/src/: first.rs
crates/trust/: Cargo.toml  run.sh
crates/trust/src/: main.rs  tcp.rs
src/: binding_def.rs  eldiro.rs  env.rs  expr.rs  lib.rs  stmt.rs  utils.rs  val.rs
src/expr/: binding_usage.rs  block.rs
