[package]
name = "eldiro-cli"
version = "0.1.0"
authors = ["Rareș Cosma <rares@getbetter.ro>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eldiro = {path = "../eldiro"}
strsplit = {path = "../strsplit"}
rustyline = "8.2.0"
